cmake_minimum_required(VERSION 3.9)
project(offer)

set(CMAKE_CXX_STANDARD 11)

add_executable(offer
        04_ReplaceSpace.c
        05_RViewList.c
        06_ConstructBinaryTree.c
        08_MinNumberInRotatedArry.c
        10_NumberOf1InBinary.c
        11_Power.cpp
        14_odd_evenArr.cpp
        14_ReoederArray.cpp
        15_KthNodeFromEnd.cpp
        44_ContinousCards.cpp
        49_StringToInt.cpp
        51_ArrCopy.cpp
        52_ArrayConstructon.cpp
        54_Numerics.cpp
        56_EntryInListLoop.cpp
        57_DeleteDulicateListNode.cpp
        59_SymmetricalBinary.cpp
        60_PrintTreesInLines.cpp
        63_KthNodeInBST.cpp
        64_StreamMedian.cpp
        65_MaxInSliding.cpp
        odd_evenArr.cpp
        test.cpp)
